# basic-calc

./: CMakeLists.txt  LICENSE  README.md  basic-calc.desktop.in
.github/: copilot-instructions.md
src/: calculator_engine.cpp  calculator_engine.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
tests/: calculator_engine_tests.cpp
